<resources>
    <string name="app_name">Payroll</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="totalSalary">Total Salary:- </string>
    <string name="benefits">Allowence</string>
    <string name="deductions">Deductions</string>
    <string name="salary">Total Salary</string>
    <string name="n">n</string>
    <string name="item">Item</string>
    <string name="value">Value</string>
    <string name="loginToContiue">Login to continue</string>
    <string name="mobileNumber">Mobile Number</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="makeSureFields">Make sure that you entered your correct info</string>
</resources>