<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:fitsSystemWindows="true"
        android:scrollbars="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/whiteBackground"
            android:orientation="vertical"
            tools:context=".presentaion.fragments.PayrollFragment">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/profileLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_8sdp"
                app:cardCornerRadius="@dimen/_8sdp"
                android:onClick="@{null}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:id="@+id/imageLayout"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:orientation="vertical"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                        <de.hdodenhof.circleimageview.CircleImageView
                            android:id="@+id/employerImage"
                            android:layout_width="@dimen/_50sdp"
                            android:layout_height="@dimen/_50sdp"
                            android:layout_marginStart="@dimen/_10sdp"
                            android:layout_marginTop="@dimen/_5sdp"
                            android:layout_marginEnd="@dimen/_10sdp"
                            android:layout_marginBottom="@dimen/_5sdp"
                            tools:src="@tools:sample/avatars" />

                        <TextView
                            android:id="@+id/dateTV"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/_8sdp"
                            android:layout_marginBottom="@dimen/_10sdp"
                            android:fontFamily="@font/cairo"
                            android:textColor="@color/black"
                            tools:text="Septemeber 2021" />
                    </androidx.appcompat.widget.LinearLayoutCompat>

                    <TextView
                        android:id="@+id/employerNameTV"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_8sdp"
                        android:gravity="center"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_12sdp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/imageLayout"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:text="This is more text" />

                    <TextView
                        android:id="@+id/employerJobTitleTV"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_7sdp"
                        android:gravity="center"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_10sdp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/imageLayout"
                        app:layout_constraintTop_toBottomOf="@id/employerNameTV"
                        tools:text="This is more text" />

                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_7sdp"
                        android:gravity="center"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@id/imageLayout"
                        app:layout_constraintTop_toBottomOf="@id/employerJobTitleTV">

                        <TextView
                            android:id="@+id/totalSalaryTitleTV"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="@dimen/_5sdp"
                            android:text="@string/totalSalary"
                            android:textColor="@color/blue"
                            android:textSize="@dimen/_10sdp" />

                        <TextView
                            android:id="@+id/totalSalaryValueTV"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/red"
                            android:textSize="@dimen/_10sdp"
                            tools:text="400 LE" />
                    </androidx.appcompat.widget.LinearLayoutCompat>
                </androidx.constraintlayout.widget.ConstraintLayout>
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/statisitcsLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_8sdp"
                app:cardCornerRadius="@dimen/_8sdp"
                android:onClick="@{null}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/profileLayout">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.github.mikephil.charting.charts.PieChart
                        android:id="@+id/payrollPiechart"
                        android:layout_width="@dimen/_100sdp"
                        android:layout_height="@dimen/_100sdp"
                        android:layout_margin="@dimen/_5sdp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias=".0"
                        app:layout_constraintVertical_bias="0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />


                    <RelativeLayout
                        android:id="@+id/benefitsLayout"
                        android:layout_width="0dp"
                        android:layout_height="@dimen/_20sdp"
                        android:layout_marginStart="@dimen/_5sdp"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:layout_marginEnd="@dimen/_10sdp"
                        android:orientation="horizontal"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/payrollPiechart"
                        app:layout_constraintTop_toTopOf="parent">

                        <ImageView
                            android:id="@+id/benefitsColor"
                            android:layout_width="@dimen/_10sdp"
                            android:layout_height="@dimen/_10sdp"
                            android:layout_alignParentStart="true"
                            android:layout_marginStart="@dimen/_5sdp"
                            android:layout_marginTop="@dimen/_5sdp"
                            android:layout_marginEnd="@dimen/_5sdp"
                            android:layout_marginBottom="@dimen/_5sdp"
                            android:src="@color/grey" />

                        <TextView
                            android:id="@+id/benefitsTV"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:layout_marginEnd="@dimen/_5sdp"
                            android:layout_toEndOf="@id/benefitsColor"
                            android:fontFamily="@font/cairo"
                            android:textColor="@color/red"
                            tools:text="500 LE " />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:layout_toEndOf="@id/benefitsTV"
                            android:text="@string/benefits"

                            android:textColor="@color/black" />
                    </RelativeLayout>

                    <RelativeLayout
                        android:id="@+id/deductionsLayout"
                        android:layout_width="0dp"
                        android:layout_height="@dimen/_20sdp"
                        android:layout_marginStart="@dimen/_5sdp"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:layout_marginEnd="@dimen/_10sdp"
                        android:orientation="horizontal"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/payrollPiechart"
                        app:layout_constraintTop_toBottomOf="@id/benefitsLayout">

                        <ImageView
                            android:id="@+id/deductionsColor"
                            android:layout_width="@dimen/_10sdp"
                            android:layout_height="@dimen/_10sdp"
                            android:layout_alignParentStart="true"
                            android:layout_marginStart="@dimen/_5sdp"
                            android:layout_marginTop="@dimen/_5sdp"
                            android:layout_marginEnd="@dimen/_5sdp"
                            android:layout_marginBottom="@dimen/_5sdp"
                            android:src="@color/yellow" />

                        <TextView
                            android:id="@+id/deductionsTV"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:layout_marginEnd="@dimen/_5sdp"
                            android:layout_toEndOf="@id/deductionsColor"
                            android:fontFamily="@font/cairo"
                            android:textColor="@color/red"
                            tools:text="500 LE " />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:layout_toEndOf="@id/deductionsTV"
                            android:text="@string/deductions"
                            android:textColor="@color/black" />
                    </RelativeLayout>

                    <ImageView
                        android:id="@+id/separator"
                        android:layout_width="0dp"
                        android:layout_height="1dp"
                        android:layout_margin="@dimen/_5sdp"
                        android:background="@android:color/darker_gray"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@id/payrollPiechart"
                        app:layout_constraintTop_toBottomOf="@id/deductionsLayout" />

                    <RelativeLayout
                        android:id="@+id/totalSalaryLayout"
                        android:layout_width="0dp"
                        android:layout_height="@dimen/_20sdp"
                        android:layout_marginStart="@dimen/_5sdp"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:layout_marginEnd="@dimen/_10sdp"
                        android:orientation="horizontal"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/payrollPiechart"
                        app:layout_constraintTop_toBottomOf="@id/separator">

                        <ImageView
                            android:id="@+id/totalSalaryColor"
                            android:layout_width="@dimen/_10sdp"
                            android:layout_height="@dimen/_10sdp"
                            android:layout_alignParentStart="true"
                            android:layout_marginStart="@dimen/_5sdp"
                            android:layout_marginTop="@dimen/_5sdp"
                            android:layout_marginEnd="@dimen/_5sdp"
                            android:layout_marginBottom="@dimen/_5sdp"
                            android:src="@color/green" />

                        <TextView
                            android:id="@+id/totalSalaryTV"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:layout_marginEnd="@dimen/_5sdp"
                            android:layout_toEndOf="@id/totalSalaryColor"
                            android:fontFamily="@font/cairo"
                            android:textColor="@color/red"
                            tools:text="500 LE " />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:layout_toEndOf="@id/totalSalaryTV"
                            android:text="@string/salary"
                            android:textColor="@color/black" />
                    </RelativeLayout>

                    <TableLayout
                        android:id="@+id/table_view"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_5sdp"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:layout_marginEnd="@dimen/_5sdp"
                        android:background="@drawable/table_background"
                        android:divider="@drawable/divider"
                        android:dividerPadding="@dimen/_5sdp"
                        android:orientation="horizontal"
                        android:showDividers="middle"
                        android:stretchColumns="*"
                        android:weightSum="3"
                        android:layout_marginBottom="@dimen/_10sdp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/payrollPiechart">

                        <TableRow
                            android:divider="@drawable/divider"
                            android:dividerPadding="5dp"
                            android:showDividers="middle">

                            <TextView
                                android:id="@+id/nTV"
                                android:background="@color/teal"
                                android:fontFamily="@font/cairo"
                                android:gravity="center"
                                android:padding="@dimen/_8sdp"
                                android:text="@string/n"
                                android:textColor="@color/white"
                                android:textSize="@dimen/_12sdp" />

                            <TextView
                                android:background="@color/teal"
                                android:fontFamily="@font/cairo"
                                android:gravity="center"
                                android:padding="@dimen/_8sdp"
                                android:text="@string/item"
                                android:textColor="@color/white"
                                android:textSize="@dimen/_12sdp" />

                            <TextView
                                android:background="@color/teal"
                                android:fontFamily="@font/cairo"
                                android:gravity="center"
                                android:padding="@dimen/_8sdp"
                                android:text="@string/value"
                                android:textColor="@color/white"
                                android:textSize="@dimen/_12sdp" />
                        </TableRow>
                    </TableLayout>
                </androidx.constraintlayout.widget.ConstraintLayout>
            </com.google.android.material.card.MaterialCardView>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</layout>